edition="2023";

// Package story defines the objects that create a CYOA story.
package story;
option go_package = "github.com/kingofmen/cyoa-exploratory/story/proto";

import "logic/proto/logic.proto";

enum RunState {
  RS_UNKNOWN = 0;
  RS_ACTIVE = 1;
  RS_HIATUS = 2;
  RS_COMPLETE = 3;
}

message Effect {
  string description = 1;
  int64 new_location = 2;
  string tweak_value = 3;
  int64 tweak_amount = 4;
  RunState new_state = 5;
}

message TriggerAction {
  logic.Predicate condition = 1;
  repeated Effect effects = 2;
  // If set, triggering this action will prevent further
  // trigger evaluation in its scope.
  bool is_final = 3;
}

message Story {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 start_location_id = 4;
  repeated TriggerAction events = 5;
}

message Location {
  int64 id = 1;
  string title = 2;
  string content = 3;
  repeated int64 available_actions = 4;
}

message Action {
  int64 id = 1;
  string title = 2;
  string description = 3;
  repeated TriggerAction triggers = 4;
}

message Playthrough {
  int64 id = 1;
  int64 story_id = 2;
  int64 location_id = 3;
  map<string, int64> values = 4;
  RunState state = 5;
}
